--- a/03_计算属性和监视/test.html
+++ b/03_计算属性和监视/test.html
@@ -30,7 +30,7 @@
     firstName : 'A',
     lastName : 'B'
   }
-/*  Object.defineProperty(p,'fullName',{
+  Object.defineProperty(p,'fullName',{
     get(){
       return  p.firstName + '-' + p.lastName
     },
@@ -45,7 +45,7 @@
   p.lastName = 'D'
   console.log(p.fullName) // C-D
   p.fullName = 'E-F'
-  console.log(p.firstName, p.lastName) // E F*/
+  console.log(p.firstName, p.lastName) // E F
 
 </script>
 </body>
