--- a/05_条件渲染/test.html
+++ b/05_条件渲染/test.html
@@ -15,10 +15,21 @@
 -->
 
 <div id="demo">
+    <p v-if="ok">求婚成功</p>
+    <p v-else>求婚失败</p>
+    <p v-show="ok">约会成功</p>
+    <p v-show="!ok">约会失败</p>
+  <button @click='ok=!ok'>Switch</button>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el:'#demo',
+    data:{
+      ok : true
+    }
+  })
 </script>
 </body>
 </html>
