--- a/04_class与style绑定/test.html
+++ b/04_class与style绑定/test.html
@@ -32,33 +32,33 @@
 
 <div id="demo">
   <h2>1. class绑定: :class='xxx'</h2>
-    <p class="classA" :class="classB">style</p>
+    <p class="classB" :class="myClass">style</p>
     <p :class='{classA:isA,classB:isB}'>hello</p>
   <h2>2. style绑定</h2>
-    <p :style = "{color,fontSize}">hello Vue</p>
+    <p :style = "{color:myColor,fontSize:size+'px'}">hello Vue</p>
+  <button @click="update">更新</button>
 </div>
-<button @click="update">submit</button>
+
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
   new Vue({
     el:'#demo',
     data:{
-      classB:'classB',
+      myClass:'classB',
       isA:true,
-      isB:true,
-      color:'red',
-      fontSize:'20px',
+      isB:false,
+      myColor:'skyblue',
+      size:20
     },
     methods:{
       update(){
-        this.a = 'classC'
-        this.isA = false
-        this.isB = true
-        this.color =  'blue'
-        this.fontSize = '30px'
+        this.myClass = 'classC'
+        this.isA = !this.isA
+        this.isB = !this.isB
+        this.myColor =  'green'
+        this.size = 100
       }
     }
   })
 </script>
 </body>
-</html>
