--- a/10_过渡&动画/test.html
+++ b/10_过渡&动画/test.html
@@ -3,6 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>10_过渡&动画1</title>
+  <style>
+    .fade-enter-active, .fade-leave-active {
+      transition: opacity .5s
+    }
+    .fade-enter, .fade-leave-to {
+      opacity: 0
+    }
+    .xxx-enter-active{
+      transition: all 1s;
+    }
+    .xxx-leave-active {
+      transition: all 3s;
+    }
+    /*隐藏时的样式*/
+    .xxx-enter, .xxx-leave-to {
+      opacity: 0;
+      transform: translateX(20px)
+    }
+  </style>
 </head>
 <body>
 <!--
@@ -19,11 +38,33 @@
   xxx-leave-active: 指定隐藏的transition
   xxx-enter: 指定隐藏时的样式
 -->
-
+<div id="test1">
+  <button @click="isShow = !isShow">toggle1</button>
+ <transition name="fade">
+   <p v-show="isShow">hello</p>
+ </transition>
+</div>
+<div id="test2">
+  <button @click="isShow = !isShow">toggle2</button>
+  <transition name="xxx">
+    <p v-show="isShow">hello</p>
+  </transition>
+</div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  new Vue({
+    el : '#test1',
+    data : {
+      isShow : true
+    }
+  })
+  new Vue({
+    el : '#test2',
+    data : {
+      isShow : true
+    }
+  })
 </script>
 </body>
 </html>
