--- a/13_插件/test.html
+++ b/13_插件/test.html
@@ -5,9 +5,22 @@
   <title>17_插件</title>
 </head>
 <body>
-
+  <div id="test">
+    <p v-my-directive="msg"></p>
+  </div>
 <script type="text/javascript" src="../js/vue.js"></script>
+<script type="text/javascript" src="./vue-myPlugin.js"></script>
 <script type="text/javascript">
+  Vue.use(MyPlugin)
+  const vm = new Vue({
+    el: '#test',
+    data: {
+      msg: 'abcd'
+    }
+  })
+
+  Vue.myGlobalMethod()
+  vm.$myMethod()
 
 </script>
 </body>
