--- a/10_过渡&动画/test2.html
+++ b/10_过渡&动画/test2.html
@@ -6,10 +6,25 @@
 
 </head>
 <body>
-
+<div id="test">
+  <h2>显示格式化的日期</h2>
+  <p>不做处理的显示:{{startTime}}</p>
+  <p>年月日时分秒: {{startTime | format-date}}</p>
+  <p>年月日: {{startTime | format-date('YYYY-MM-DD')}}</p>
+  <p>时分秒: {{startTime | format-date('HH:mm:ss')}}</p>
+</div>
 <script type="text/javascript" src="../js/vue.js"></script>
+<script type="text/javascript" src="https://cdn.bootcss.com/moment.js/2.22.1/moment.min.js"></script>
 <script>
-
+  Vue.filter('format-date',function (value,format='YYYY-MM-DD HH:mm:ss') {
+    return moment(value).format(format)
+  })
+  new Vue({
+    el:'#test',
+    data:{
+      startTime: Date.now()+1000
+    }
+  })
 </script>
 </body>
 </html>
