--- a/12_指令/test.html
+++ b/12_指令/test.html
@@ -20,12 +20,25 @@
   v-cloak : 使用它防止闪现表达式, 与css配合: [v-cloak] { display: none }
 -->
 <div id="example">
-
+ <p v-html="msg"></p>
+ <p v-text="msg"></p>
+ <p ref="content">abcdefg</p>
+  <button @click="hint">提示</button>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  new Vue({
+    el : '#example',
+    data : {
+      msg:'<a href="http://www.baidu.com">点击</a>'
+    },
+    methods : {
+      hint(){
+        alert(this.$refs.content.textContent)
+      }
+    }
+  })
 </script>
 </body>
 </html>
