--- a/12_指令/test2.html
+++ b/12_指令/test2.html
@@ -27,10 +27,34 @@
   1. 功能类型于v-text, 但转换为全大写
   2. 功能类型于v-text, 但转换为全小写
 -->
-
+  <div id="test1">
+    <p v-upper-text="msg"></p>
+    <p v-lower-text="msg"></p>
+  </div>
+<div id="test2">
+  <p v-upper-text="msg"></p>
+  <p v-lower-text="msg"></p>
+</div>
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
-
+  Vue.directive('upper-text',function (el, binding) {
+    el.textContent = binding.value.toUpperCase()
+  })
+  new Vue({
+    el : '#test1',
+    data : {
+      msg:'NBA I Love This Game!'
+    },
+    directives:{'lower-text'(el,binding){
+      el.textContent = binding.value.toLowerCase()
+    }}
+  })
+  new Vue({
+    el : '#test2',
+    data : {
+      msg:'You Can Look !!'
+    }
+  })
 </script>
 </body>
 </html>
